--- a/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Proxy/appsettings.Development.json
+++ b/Source/TimeWarp.Blazor.Template/templates/TimeWarp.Blazor/Source/Proxy/appsettings.Development.json
@@ -4,5 +4,42 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ReverseProxy": {
+    "Clusters": {
+      "Api": {
+        "Destinations": {
+          "Api1": {
+            "Address": "https://localhost:7255"
+          }
+        }
+      },
+      "Web": {
+        "Destinations": {
+          "Web1": {
+            "Address": "https://localhost:5001"
+          }
+        }
+      }
+    },
+    "Routes": {
+      "ApiRoute": {
+        "ClusterId": "Api",
+        "Match": {
+          "Path": "/api/{**catch-all}"
+        },
+        "Transforms": [
+          {
+            "PathRemovePrefix": "/api"
+          }
+        ]
+      },
+      "WebRoute": {
+        "ClusterId": "Web",
+        "Match": {
+          "Path": "{**catch-all}"
+        }
+      }
+    }
   }
 }
